--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # CUSTOMIZE
 # Name of your site (displayed in the header)
 # This should be your name or nickname.
-name: Your Name
+name: Stan Choi
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: CSCI-UA 480 Student, Spring 2019
+description: CSCI-UA 480 Student, Spring 2019, Want to do something with Statcast in Baseball perhaps
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
@@ -23,14 +23,14 @@ avatar: https://avatars1.githubusercontent.com/u/46607804?s=200&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: sjc591@nyu.edu
+  facebook: Stanimal Choi
   flickr:
-  github: nyu-ossd-s19
+  github: StanimalTheMan
   instagram:
   linkedin:
   pinterest:
-  twitter:
+  twitter: Stan Choi
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,14 +41,14 @@ footer-links:
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-url: "https://nyu-ossd-s18.github.io/weekly"
+url: "https://nyu-ossd-s18.github.io/StanimalTheMan-weekly"
 
 # CUSTOMIZE
 # Replace this with the name of your own repository.
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-baseurl: "/weekly"
+baseurl: "/StanimalTheMan-weekly"
 
 #
 # !! You don't need to change any of the configuration flags below !!
