--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Stan Choi
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: CSCI-UA 480 Student, Spring 2019, Want to do something with Statcast in Baseball perhaps
+description: CSCI-UA 480 Student, Spring 2019, Diehard Baseball Fan 
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
